--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 inventory.yml
+credentials.json
 
 # Local .terraform directories
 **/.terraform/*
@@ -27,6 +28,7 @@ override.tf.json
 
 # Ignore transient lock info files created by terraform apply
 .terraform.tfstate.lock.info
+.terraform.lock.hcl
 
 # Include override files you do wish to add to version control using negated pattern
 # !example_override.tf
