add ansible roles

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -11,8 +11,7 @@
 
 # some basic default values...
 
-inventory      = $HOME/42cursus/cloud-1/inventory.yml
-; inventory      = $HOME/.ansible/hosts
+inventory      =
 remote_tmp     = $HOME/.ansible/tmp
 forks          = 150
 sudo_user      = root
