nedd to have role directories at root of ansible somehow. also, started to create 'dummy' files to explain how to use sensitive data

--- a/ansible/docker_config/tasks/main.yml
+++ b/ansible/docker_config/tasks/main.yml
@@ -1,5 +1,10 @@
 ---
 # tasks file for docker_config
+
+- name: Ensure we have reached the docker_config tasks
+  debug:
+    msg: "Starting docker_config tasks"
+
 - name: Start and enable Docker service
   service:
     name: docker
