--- a/ansible/docker_config/tasks/main.yml
+++ b/ansible/docker_config/tasks/main.yml
@@ -12,7 +12,7 @@
     enabled: yes
 
 - name: Add the user to the docker group
-  ansible.builtin.shell: |
-    usermod -aG docker {{ ansible_user }}
-  args:
-    warn: false
+  user:
+    name: "{{ ansible_user }}"
+    groups: docker
+    append: yes
