updated dummy files and adding some info for terraform/gcp firewall conf

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,5 +1,6 @@
 - name: Install and configure Docker on GCP instance
   hosts: all
+  # hosts: transcendence42.rocks
   become: yes
   roles:
     - packet_upgrade
