--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -16,6 +16,7 @@ remote_tmp     = $HOME/.ansible/tmp
 forks          = 150
 sudo_user      = root
 transport      = smart
+force_color    = True
 
 # plays will gather facts by default, which contain information about
 # the remote system.
