--- a/ansible/packet_upgrade/vars/main.yml
+++ b/ansible/packet_upgrade/vars/main.yml
@@ -1,2 +1,6 @@
----
-# vars file for packet_upgrade
+# ---
+# # vars file for packet_upgrade
+# - name: Copy inception files into the instance
+#   copy:
+#     src: ./inception_setup/files/src
+#     dest: /home/{{ ansible_user }}/inception
