--- a/ansible/inception_setup/tasks/main.yml
+++ b/ansible/inception_setup/tasks/main.yml
@@ -21,4 +21,11 @@
   file:
     path: /home/{{ ansible_user }}/data/public
     state: directory
-    mode: '0755'
+
+- name: Generate .env file for each VM
+  template:
+    src: env.j2
+    dest: "/home/{{ ansible_user }}/inception/.env"
+    mode: '0644'
+  vars:
+    vm_ip: "{{ ansible_host }}"
